--- a/src/App.css
+++ b/src/App.css
@@ -115,6 +115,25 @@ html {
 }
 
 
+.google-login-btn{
+  background-color: var(--primary-color); 
+  color: white; 
+  padding: 10px 20px; 
+  border: none; 
+  border-radius: 5px; 
+  font-size: 16px; 
+  cursor: pointer; 
+  transition: background-color 0.3s ease; 
+  text-decoration: none;
+  width: 100%;
+}
+
+.google-login-btn a{
+  text-decoration: none;
+  color: #fff;
+}
+
+
 
 /* sign-up form end */
 
@@ -145,4 +164,36 @@ html {
 
 .btn-close {
   color: #333; /* Close button color */
+}
+
+
+
+/* banner-section start */
+.banner-section .banner-img img{
+  width: 100%;
+  height: 450px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+/* banner-section end */
+
+
+.footernav-section {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #fff; 
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.15); 
+  padding: 16px 20px; 
+  z-index: 1000; 
+}
+
+@media(min-width:992px){
+  .footernav-section{
+    display: none;
+  }
+}
+
+.footernav-section .footer-nav-box-main .footer-nav-box img{
+  width: 30px;
 }
