--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,18 @@ body {
   padding-right: 0 !important;
 }
 
+.modal-open body {
+  padding-right: 0 !important;
+}
+
 html {
   overflow-x: hidden !important;
+}
+p{
+  margin-bottom: 0 !important;
+}
+a{
+  text-decoration: none;
 }
 
 .offcanvas-half {
@@ -43,12 +53,12 @@ border-radius: 50%;
 /* navbar section start */
 
 .header-scrolled {
-  position: fixed;
+  position: fixed !important;
   margin: 0;
   top: 0;
   left: 0;
   width: 100%;
-  height: 91px;
+  height: 70px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   background-color: #fff;
   top: -80px !important;
@@ -57,6 +67,7 @@ border-radius: 50%;
   transform: translateY(80px) !important;
   transition: transform 500ms ease, background 500ms ease !important;
   z-index: 99;
+  background: var(--primary-color) !important;
 }
 
 .header-btn a{
@@ -68,8 +79,12 @@ border-radius: 50%;
   transition: background-color 0.3s ease; 
 }
 .navbar{
-  background: var(--primary-color) !important;
+    position: absolute;
+    top: 0;
+    z-index: 99;
+    width: 100%;
 }
+
 
 .navbar .nav-link{
   color: #fff !important;
@@ -152,7 +167,16 @@ border-radius: 50%;
   text-decoration: none;
   color: #fff;
 }
+.navbar-brand img{
+ width: 65px;
+ object-position: top;
+}
 
+@media(max-width:991px){
+  .banner-section .banner-img img{
+   width: 80px !important;
+  }
+}
 
 
 /* sign-up form end */
@@ -189,11 +213,65 @@ border-radius: 50%;
 
 
 /* banner-section start */
-.banner-section .banner-img img{
-  width: 100%;
+.banner-section .banner-img {
+  position: relative;
+}
+
+.banner-section .banner-img img {
+  width: 100% !important;
   height: 450px;
   object-fit: cover;
-  border-radius: 10px;
+}
+
+/* Overlay */
+.banner-section .banner-img::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3); 
+  z-index: 1;
+}
+.banner-section .banner-img img {
+  position: relative;
+  z-index: 0;
+}
+
+.banner-info{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform:  translate(-50% , -50%);
+  z-index: 9;
+  width: 100%;
+}
+.banner-info h1{
+  color: #fff;
+  font-size: 40px;
+  font-weight: 600;
+}
+.banner-info p{
+  font-weight: 400;
+  font-size: 18px;
+  color: #fff;
+}
+@media(max-width:991px){
+  .banner-info h1{
+    font-size: 30px;
+  }
+}
+@media(max-width:576px){
+  .banner-info h1{
+    font-size: 25px;
+  }
+}
+
+@media(max-width:991px){
+  .banner-section .banner-img img{
+    height: 350px;
+  }
 }
 /* banner-section end */
 
@@ -220,4 +298,93 @@ border-radius: 50%;
 }
 
 /* .footernav-section end */
+
+/* subscription-section start */
+.subscription-section .subscription-section-tittle h5{
+ font-weight: 500;
+ font-size: 25px;
+ color: var(--primary-color);
+}
+
+.subscription-section .sub-card-main{
+  border: 1px solid var(--primary-color);
+  border-radius: 10px;
+}
+
+.sub-card-main .sub-card-tittle{
+  background: var(--primary-color);
+  padding: 10px;
+  border-radius: 10px 10px 0px 0px;
+} 
+
+.sub-card-main .sub-card-tittle .sub-card-img img{
+  width: 65px;
+  border-radius: 15px;
+  object-fit: cover;
+  border: 1px solid #fff;
+}
+.sub-card-main .sub-card-tittle .sub-card-name h6{
+ font-weight: 500;
+ font-size: 17px;
+ margin-bottom: 0;
+ color: #fff;
+}
+.sub-card-main .sub-card-tittle .sub-card-name p{
+  font-weight: 400;
+  font-size: 16px;
+  color: #fff;
+}
+.sub-card-body {
+  padding: 10px;
+}
+
+.sub-card-body h6{
+  font-weight: 500;
+  font-size: 17px;
+  color: #000;
+}
+.sub-card-body p{
+  color: #000;
+}
+.sub-card-body i{
+  color: #000;
+}
+
+.sub-card-btn a {
+  display: block;           
+  width: 100%;             
+  padding: 7px 15px;      
+  text-decoration: none;    
+  border-radius: 5px;       
+  color: #fff;             
+  text-align: center;       
+  background-color: #f5f5f5;
+  background: var(--primary-color);
+}
+
+
+.subscription-section .owl-nav button {
+  width: 40px !important;
+  height: 40px !important;
+  color: #000 !important;
+  border-radius: 50% !important;
+  display: inline-flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  border: 1px solid var(--primary-color) !important;
+  transition: 0.3s all;
+}
+.subscription-section .owl-nav button:hover{
+  background: var(--primary-color) !important;
+}
+.subscription-section .owl-nav button:hover i{
+  color: #fff;
+}
+.subscription-section .owl-theme .owl-nav {
+  position: absolute;
+  right: 0%;
+  top: -22%;
+}
+
+/* subscription-section end */
 
